<resources>
    <string name="app_name">TestSummer</string>
    <string name="exit_button">exit_button</string>
    <string name="song_name">song_name</string>
    <string name="song_author">song_author</string>
    <string name="left_button">left_button</string>
    <string name="play_button_play_act">play_button</string>
    <string name="right_button">right_button</string>
    <string name="settings_button">settings_button</string>
    <string name="song_image">Song name</string>
    <string name="play_button">Play</string>
</resources>
