<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/icons"
    android:orientation="vertical"
    tools:context=".activity_play">

    <RelativeLayout
        android:id="@+id/exit_and_settings_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_dark">


        <ImageButton
            android:id="@+id/mainImageButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:background="@color/primary_dark"
            android:contentDescription="@string/exit_button"
            android:src="@drawable/baseline_arrow_back_ios_white_36" />

        <ImageButton
            android:id="@+id/settingImageButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_alignParentEnd="true"
            android:background="@color/primary_dark"
            android:contentDescription="@string/settings_button"
            android:src="@drawable/baseline_settings_white_36" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/thumbnail_height"
        android:background="@color/icons"
        android:layout_weight="1"
        android:contentDescription="@string/song_image"
        android:tint="@color/secondary_text"
        app:srcCompat="@drawable/baseline_music_note_black_48" />

    <TextView
        android:id="@+id/name_song"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/icons"
        android:foregroundTint="@color/secondary_text"
        android:gravity="left"
        android:text="@string/song_name"
        android:textColor="@color/primary_text"
        android:textColorHighlight="@color/secondary_text"
        android:textColorHint="@color/secondary_text"
        android:textColorLink="@color/secondary_text"
        android:textSize="24sp"
        app:drawableTint="@color/secondary_text" />

    <Button
        android:id="@+id/author_song"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/icons"
        android:gravity="left|center_vertical"
        android:text="@string/song_author"
        android:textColor="@color/primary"
        android:textSize="24sp"
        tools:ignore="RtlHardcoded" />

    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:backgroundTint="@color/icons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/work_with_song_layout"
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/thumbnail_height"
        android:background="@color/icons"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/leftImageButton"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:background="@color/icons"
            android:contentDescription="@string/left_button"
            android:src="@drawable/baseline_skip_previous_black_48"
            android:tint="@color/primary_text" />

        <ImageButton
            android:id="@+id/playImageButton"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="@color/icons"
            android:contentDescription="@string/play_button_play_act"
            android:src="@drawable/baseline_pause_black_48"
            android:tint="@color/primary_text" />

        <ImageButton
            android:id="@+id/rightImageButton"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="100dp"
            android:background="@android:color/white"
            android:contentDescription="@string/right_button"
            android:src="@drawable/baseline_skip_next_black_48"
            android:tint="@color/primary_text" />
    </LinearLayout>


</LinearLayout>